# Scalable-E-Commerce-Platform

./: .gitignore  README.md
cart-service/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
cart-service/app/: __init__.py
cart-service/app/api/: __init__.py
cart-service/app/api/routes/: cart.py  (+1 more)
cart-service/app/db/: __init__.py  session.py
cart-service/app/models/: __init__.py  cart.py
cart-service/app/schemas/: __init__.py  cart.py
cart-service/k8s/: deployment.yaml  service.yaml
order-service/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
order-service/app/: __init__.py
order-service/app/api/: __init__.py
order-service/app/db/: __init__.py  session.py
order-service/app/models/: __init__.py  order.py
order-service/app/schemas/: __init__.py  order.py
order-service/k8s/: deployment.yaml  service.yaml
product-service/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
product-service/app/: __init__.py
product-service/app/api/: __init__.py
product-service/app/db/: __init__.py  session.py
product-service/k8s/: deployment.yaml  service.yaml
user-service/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  test.db
user-service/app/: __init__.py
user-service/app/api/: __init__.py
user-service/app/api/routes/: health.py  users.py
user-service/app/db/: session.py
user-service/app/models/: __init__.py  base.py  user.py
user-service/app/schemas/: __init__.py  user.py
user-service/k8s/: deployment.yaml  service.yaml
(+9 files in other folders)
